--- a/package.json
+++ b/package.json
@@ -8,14 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@primer/css": "^12.5.0",
+    "axios": "^0.19.0",
+    "bulma": "^0.7.5",
     "core-js": "^2.6.5",
+    "highlight.js": "^9.15.9",
+    "postcss-node-sass": "^2.1.8",
+    "postcss-scss": "^2.0.0",
+    "showdown": "^1.9.0",
+    "v-runtime-template": "^1.10.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-highlightjs": "^1.3.3",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/highlight.js": "^9.12.3",
+    "@types/showdown": "^1.9.3",
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.9.0",
     "@vue/cli-plugin-typescript": "^3.9.0",
