--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@primer/css": "^12.5.0",
+    "@types/chance": "^1.0.5",
     "axios": "^0.19.0",
     "bulma": "^0.7.5",
+    "chance": "^1.0.18",
     "core-js": "^2.6.5",
     "highlight.js": "^9.15.9",
     "postcss-node-sass": "^2.1.8",
